upgrade dependencies; move to androidx

--- a/frescoimageviewer/build.gradle
+++ b/frescoimageviewer/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 1
         versionName "0.5.0"
     }
@@ -25,18 +25,19 @@ android {
 
 }
 
-publish {
-    groupId = 'com.github.stfalcon'
-    artifactId = 'frescoimageviewer'
-    publishVersion = '0.5.0'
-    desc = 'Customizable full screen image viewer based on Fresco library, that includes "pinch to zoom" and "swipe to dismiss" gestures'
-    licences = ['Apache-2.0']
-    uploadName = 'FrescoImageViewer'
-    website = 'https://github.com/stfalcon-studio/FrescoImageViewer.git'
-}
+//publish {
+//    groupId = 'com.github.stfalcon'
+//    artifactId = 'frescoimageviewer'
+//    publishVersion = '0.5.0'
+//    desc = 'Customizable full screen image viewer based on Fresco library, that includes "pinch to zoom" and "swipe to dismiss" gestures'
+//    licences = ['Apache-2.0']
+//    uploadName = 'FrescoImageViewer'
+//    website = 'https://github.com/stfalcon-studio/FrescoImageViewer.git'
+//}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    api "androidx.appcompat:appcompat:1.0.0-beta01"
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'me.relex:photodraweeview:1.1.0'
     provided 'com.facebook.fresco:fresco:0.12.0'
